@@ -10,4 +10,4 @@ for s in lhapdf.availablePDFSets():
     sets.append([i.lhapdfID, i.name, i.dataversion])
 for id, name, version in sorted(sets):
     if id > 0:
-        print id, name, version
+        print('%d %s %d' % (id,name,version))
